feat: make CRUD notes

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -29,6 +29,14 @@
     }
 }
 
+.btn-sanger {
+    background-color: red;
+    transition: background-color .3s ease;
+    &:hover {
+        background-color: darken($color: red, $amount: 10);
+    }
+}
+
 .google-btn {
     cursor: pointer;
     margin-top: 5px;
